--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   sidebarx: ^0.17.1
   fl_chart: ^1.0.0
   table_calendar: ^3.2.0
+  carousel_slider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
